components createds with styles

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+  <ul>
+    <li><a href="https://www.linkedin.com/in/joice-cristina-alves-de-oliveira/" target="_blank">Linkedin</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://github.com/joicecriss" target="_blank">GitHub</a></li>
+    <li><span>•</span></li>
+    <li><a href="https://web.dio.me/users/joice1509oliveira/?tab=achievements" target="_blank">DIO</a></li>
+  </ul>
+</div>
