--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,24 +1,19 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-      src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/80C64C0B63382CD3ED2653356125F275F63D036028A77D38DC3286AD851A6833/scale?width=1200&aspectRatio=1.78&format=jpeg"
+      src="{{ photoCover}}"
       alt=""
       height="200px"
       srcset=""
     />
   </div>
   <div class="big-card__title">
-    <h1><a href="">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="">{{ cardTitle }}</a></h1>
   </div>
   <div class="big-card__description">
     <p>
       <a href="">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-        Lorem Ipsum has been the industry's standard dummy text ever since the
-        1500s, when an unknown printer took a galley of type and scrambled it to
-        make a type specimen book. It has survived not only five centuries, but
-        also the leap into electronic typesetting, remaining essentially
-        unchanged.
+        {{ cardDescription }}
       </a>
     </p>
   </div>
