--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -21,9 +21,24 @@
 
 .content__description{
   margin-top: 15px;
+  text-align: center;
 }
 
 .content__description > p{
   margin-top: 20px;
+  max-width: 35rem;
   color: gray;
+}
+
+.content__button{
+  margin-top: 40px;
+  padding: 10px;
+  border-radius: 2rem;
+  border-color: white;
+}
+
+.content__button:hover{
+  background-color: white;
+  color: black;
+  font-weight: 700;
 }
